fix: c-button letter-spacing

--- a/taccsite_cms/static/site_cms/css/src/_imports/components/c-button.css
+++ b/taccsite_cms/static/site_cms/css/src/_imports/components/c-button.css
@@ -12,5 +12,5 @@
 
 :--c-button {
   font-weight: var(--bold);
-  letter-spacing: 0.5em;
+  letter-spacing: 0.05em;
 }
